6.55_02  Wed Aug  5 00:36:36 PDT 2009
    Feature Changes
    * PREFIX now applies to relative directories.  This is a change since
      6.20 when they were ignored.  Its necessary for relocatable Perls.

    VMS
    * Refactoring of "MakeMaker Parameters" section in 6.55_01 broke VMS.
      (Craig Berry)


6.55_01  Tue Jul 14 15:53:30 PDT 2009
    Test Fixes
    * The tests got a bit overzealous and removed the LIB environment variable
      while is necessary for some compilers to work. [rt.cpan.org 47722]
      (Jan Dubois)
    * Another fix for arch_check() on Windows changing how we normalize
      long and short filenames. [rt.cpan.org 47723] (Jan Dubois)

    New Features
    * BUILD_REQUIRES is added, similar to PREREQ_PM but for modules which
      are necessary to build, but not run, your module. (Alexandr Ciornii)


6.54  Tue Jul  7 16:48:22 PDT 2009
    Test Fixes
    * Added perl core boilerplate code to a few new tests which were missing
      them.


6.53_03  Thu Jul  2 14:47:45 PDT 2009
    Bug Fixes
    * You'd get a warning if you had a PREREQ_PM on a module with no $VERSION
      like Config (broken in 6.51_01) [rt.cpan.org 47448]

    Test Fixes
    * Upgrade the version of Test::More we ship with to 0.88.
    * Fix MM_Cygwin.t for older Perls missing Cygwin::win_to_posix_path()
      broken in 6.53_01.
    * Fix miniperl.t for Windows.  Our method of shutting off XS didn't
      work for Win32.pm
    * Old versions of version.pm, like what ships with OS X, dent Foo->VERSION
      causing prereq.t to fail.  [rt.cpan.org 47296]
    * Add missing core test boilerplates
      [blead e39d780342f3e91579069fdc80eda72bfe639ae7]


6.53_02  Sun Jun  7 19:24:56 PDT 2009
    Test Fixes
    * Stray use of Shell::Command broke older perls

    Other
    * MakeMaker will now automatically test itself with multiple
      perl versions before releasing.


6.53_01  Sun Jun  7 19:02:20 PDT 2009
    Bug Fixes