@@ -3,7 +3,7 @@ package ExtUtils::MM;
 use strict;
 use ExtUtils::MakeMaker::Config;
 
-our $VERSION = '6.55_02';
+our $VERSION = '6.55_03';
 
 require ExtUtils::Liblist;
 require ExtUtils::MakeMaker;
