@@ -10,7 +10,7 @@ use Config;
 
 our @ISA = qw(Exporter);
 our @EXPORT = qw(&Mksymlists);
-our $VERSION = '6.55_02';
+our $VERSION = '6.55_03';
 
 sub Mksymlists {
     my(%spec) = @_;
