@@ -36,6 +36,7 @@ my %versions = (q[$VERSION = '1.00']            => '1.00',
 
                 '$VERSION = sprintf("%d.%03d", q$Revision: 3.74 $ =~ /(\d+)\.(\d+)/);' => '3.074',
                 '$VERSION = substr(q$Revision: 2.8 $, 10) + 2 . "";'                   => '4.8',
+
                );
 
 if( $Has_Version ) {
@@ -43,10 +44,40 @@ if( $Has_Version ) {
     $versions{q[$VERSION = qv("1.2.3")]}               = qv("1.2.3");
 }
 
+if( $] >= 5.011001 ) {
+    $versions{'package Foo 1.23;'         } = '1.23';
+    $versions{'package Foo::Bar 1.23;'    } = '1.23';
+    $versions{'package Foo v1.2.3;'       } = 'v1.2.3';
+    $versions{'package Foo::Bar v1.2.3;'  } = 'v1.2.3';
+    $versions{' package Foo::Bar 1.23 ;'  } = '1.23';
+    $versions{"package Foo'Bar 1.23;"     } = '1.23';
+    $versions{"package Foo::Bar 1.2.3;"   } = '1.2.3';
+    $versions{'package Foo 1.230;'        } = '1.230';
+    $versions{'package Foo 1.23_01;'      } = '1.23_01';
+    $versions{'package Foo v1.23_01;'     } = 'v1.23_01';
+    $versions{q["package Foo 1.23"]}        = 'undef';
+    $versions{<<'END'}                      = '1.23';
+package Foo 1.23;
+our $VERSION = 2.34;
+END
+
+    $versions{<<'END'}                      = '2.34';
+our $VERSION = 2.34;
+package Foo 1.23;
+END
+
+    $versions{<<'END'}                      = '2.34';
+package Foo::100;
+our $VERSION = 2.34;
+END
+}
+
 plan tests => (2 * keys %versions) + 4;
 
-while( my($code, $expect) = each %versions ) {
-    is( parse_version_string($code), $expect, $code );
+for my $code ( sort keys %versions ) {
+    my $expect = $versions{$code};
+    (my $label = $code) =~ s/\n/\\n/g;
+    is( parse_version_string($code), $expect, $label );
 }
 
 
@@ -60,9 +91,9 @@ sub parse_version_string {
     $_ = 'foo';
     my $version = MM->parse_version('VERSION.tmp');
     is( $_, 'foo', '$_ not leaked by parse_version' );
-    
+
     unlink "VERSION.tmp";
-    
+
     return $version;
 }
 
@@ -73,7 +104,7 @@ sub parse_version_string {
 SKIP: {
     skip "need version.pm", 4 unless $Has_Version;
     is parse_version_string(q[ $VERSION = '1.00'; sub version { $VERSION } ]),
-       '1.00';
+       '1.00', "eval 'sub version {...} in version string";
     is parse_version_string(q[ use version; $VERSION = version->new("1.2.3") ]),
-       qv("1.2.3");
+       qv("1.2.3"), "version.pm not confused by version sub";
 }
